Maybe I just forgot that I had to manually checkout

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Debug
-        run: ls -R $GITHUB_WORKSPACE && echo "---" && ls -R .
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Deploy to Staging server
         uses: AEnterprise/rsync-deploy@v1.0
         env:
